fixed wrapping of long words in admin readonly fields

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -84,6 +84,7 @@ form ul.inline li {
     margin-top: 0;
     margin-bottom: 0;
     margin-left: 170px;
+    overflow-wrap: break-word;
 }
 
 .aligned ul label {
